--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,6 +1,5 @@
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css" /> 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <!--<div>
   <button id="demo-menu-lower-left" class="mdl-button mdl-js-button mdl-button--icon" (click)="clickMe()">
@@ -8,24 +7,30 @@
   </button>
 </div>-->
 
-<div class="main-container">
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header mdl-layout__header--transparent">
-      
-    </header>
 
-    <!--Slide nav -->
-    <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Profile name here</span>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Play</a>
-        <a class="mdl-navigation__link" href="">Profile</a>
-        <a class="mdl-navigation__link" href="">Stats</a>
-        <a class="mdl-navigation__link" href="">Logout</a>
-      </nav>
-    </div>
-    <main class="mdl-layout__content">
-      <div class="page-content"><!-- Your content goes here --></div>
-    </main>
-</div>
+<div class="main-container">
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        
+      </header>
+
+      <!--Slide nav -->
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Profile name here</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" target="_blank" [routerLink] = "['/play']">Play</a>
+          <a class="mdl-navigation__link" href="">Profile</a>
+          <a class="mdl-navigation__link" href="">Stats</a>
+          <a class="mdl-navigation__link" href="">Logout</a>
+        </nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="page-content">
+          <body>    
+            <!--<canvas #mycanvas id="screen" width="1788" height="1116"></canvas>-->
+            <router-outlet></router-outlet>
+          </body>
+        </div>
+      </main>
+  </div>
 </div>
