Add almost all of the components

--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -1,1 +1,42 @@
-<h3> HOME! </h3>
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css" /> 
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-red.min.css" />
+
+<div class="main-container">
+
+    <div class="list-container list-container-left">
+        <ol class="demo-list-item mdl-list">
+            <h4>Top Players</h4>
+            <li class="mdl-list__item">
+                <span class="mdl-list__item-primary-content">
+                    Player one
+                </span>
+            </li>
+        </ol>
+    </div>
+
+    <div class="list-container">
+        <ol class="top-list">
+            <h4>Most Kills</h4>
+            <li >
+                <span class="mdl-list__item-primary-content">
+                    Player two 2
+                </span>
+            </li>
+            <li>
+                <span class="mdl-list__item-primary-content">Apples</span>
+            </li>
+        </ol>
+    </div>
+
+    <div class="list-container">
+        <ol class="demo-list-item mdl-list">
+            <h4>Highest Level</h4>
+            <li class="mdl-list__item">
+                <span class="mdl-list__item-primary-content">
+                    Player three
+                </span>
+            </li>
+        </ol>
+    </div>
+
+</div>
