--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,36 +1,44 @@
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css" /> 
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-red.min.css" />
+<script src="/node_modules/material-design-lite/material.min.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<!--<div>
-  <button id="demo-menu-lower-left" class="mdl-button mdl-js-button mdl-button--icon" (click)="clickMe()">
-    <i class="material-icons">more_vert</i>  
-  </button>
-</div>-->
-
 
 <div class="main-container">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-layout__header--transparent">
-        
-      </header>
-
-      <!--Slide nav -->
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Profile name here</span>
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <!-- Title -->
+        <span class="mdl-layout-title">
+          <a class="mdl-navigation__link mdl-layout-title" [routerLink]="['/home']">RogueLike</a>
+        </span>
+        <!-- Add spacer, to align navigation to the right -->
+        <div class="mdl-layout-spacer"></div>
+        <!-- Navigation -->
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" target="_blank" [routerLink] = "['/play']">Play</a>
-          <a class="mdl-navigation__link" href="">Profile</a>
-          <a class="mdl-navigation__link" href="">Stats</a>
+          <a class="mdl-navigation__link" (click)="playClicked()" [routerLink]="['/play']">Play</a>
+          <a class="mdl-navigation__link" [routerLink]="['/profile']">Profile</a>
+          <a class="mdl-navigation__link" [routerLink]="['/stats']">Stats</a>
           <a class="mdl-navigation__link" href="">Logout</a>
         </nav>
       </div>
-      <main class="mdl-layout__content">
-        <div class="page-content">
-          <body>    
-            <!--<canvas #mycanvas id="screen" width="1788" height="1116"></canvas>-->
-            <router-outlet></router-outlet>
-          </body>
-        </div>
-      </main>
+    </header>
+    
+    <!--Slide nav -->
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">Profile name here</span>
+      <nav class="mdl-navigation">
+        <!--<a class="mdl-navigation__link" target="_blank" (click)="playClicked()" [routerLink]="['/play']">Play</a>-->
+        <a class="mdl-navigation__link" target="_blank" (click)="playClicked()" [routerLink]="['/play']">Play</a>
+        <a class="mdl-navigation__link" [routerLink]="['/profile']">Profile</a>
+        <a class="mdl-navigation__link" [routerLink]="['/stats']">Stats</a>
+        <a class="mdl-navigation__link" href="">Logout</a>
+      </nav>
+    </div>
+    <main class="mdl-layout__content">
+      <div class="page-content">
+        <body>  
+          <router-outlet></router-outlet>
+        </body>
+      </div>
+    </main>
   </div>
 </div>
