--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -1,42 +1,125 @@
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css" /> 
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-red.min.css" />
 
-<div class="main-container">
+<div class="container-fluid">
 
-    <div class="list-container list-container-left">
-        <ol class="demo-list-item mdl-list">
-            <h4>Top Players</h4>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
-                    Player one
-                </span>
-            </li>
-        </ol>
+    <div class="row">
+        <div class="col-md-4 table-responsive container-bordered">
+            <h4 class="text-justify">Top Player</h4>
+            <table class="table table-condensed table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Player</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>100</td>
+                    </tr>
+                    <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>100</td>
+                        </tr>
+                </tbody>
+            </table>   
+        </div>
+        <div class="table-responsive col-md-4 container-bordered">
+            <h4 class="text-justify">Most Kills</h4>
+            <table class="table table-condensed table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Player</th>
+                        <th>Kills</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>20</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>15</td>
+                    </tr>
+                    <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>15</td>
+                            </tr>
+                            <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>15</td>
+                                </tr>
+                                <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr>
+                                            <th scope="row">2</th>
+                                            <td>Jacob</td>
+                                            <td>15</td>
+                                        </tr>
+                                        <tr>
+                                                <th scope="row">2</th>
+                                                <td>Jacob</td>
+                                                <td>15</td>
+                                            </tr>
+                                            <tr>
+                                                    <th scope="row">2</th>
+                                                    <td>Jacob</td>
+                                                    <td>15</td>
+                                                </tr>
+                </tbody>
+            </table>   
+        </div>
+        <div class="table-responsive col-md-4 container-bordered">
+            <h4 class="text-justify">Highest Level</h4>
+            <table class="table table-condensed table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Player</th>
+                        <th>Level</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>4</td>
+                        </tr>
+                </tbody>
+            </table>   
+        </div>
     </div>
-
-    <div class="list-container">
-        <ol class="top-list">
-            <h4>Most Kills</h4>
-            <li >
-                <span class="mdl-list__item-primary-content">
-                    Player two 2
-                </span>
-            </li>
-            <li>
-                <span class="mdl-list__item-primary-content">Apples</span>
-            </li>
-        </ol>
-    </div>
-
-    <div class="list-container">
-        <ol class="demo-list-item mdl-list">
-            <h4>Highest Level</h4>
-            <li class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
-                    Player three
-                </span>
-            </li>
-        </ol>
-    </div>
-
 </div>
