--- a/my-app/src/app/home/home.component.css
+++ b/my-app/src/app/home/home.component.css
@@ -2,7 +2,39 @@
     border: 2px solid black;
 }
 
-.table-responsive {
-    height: 50vh;
-    max-height: 50vh;
+.panel{
+    margin: 0;
+    max-width: 100%;
+    padding: 0;
+}
+
+.previous button{
+    float: left;
+}
+
+.next button{
+    float: right;
+}
+
+.row{
+    margin-top: 15vh;
+}
+
+.table-fixed thead {
+    width: 100%;
+}
+
+.table-fixed tbody {
+    max-height: 50vh; /*sets how big the tables are on the page */
+    overflow-y: auto;
+    width: 100%;
+}
+
+.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+}
+
+.table-fixed tbody td, .table-fixed thead > tr> th {
+    border-bottom-width: 0;
+    float: left;
 }
