--- a/my-app/src/app/profile/profile.component.html
+++ b/my-app/src/app/profile/profile.component.html
@@ -1,1 +1,5 @@
 <h3> PROFILE! </h3>
+
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+    <span aria-hidden="true">&larr;</span>TEST
+</button>
