--- a/my-app/src/app/stats/stats.component.html
+++ b/my-app/src/app/stats/stats.component.html
@@ -1,1 +1,41 @@
-<h3> STATS! </h3>
+<div class="container-fluid">
+    <div class="row">
+        <div class="page-header">
+            <h1><small>Player name</small></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+            <div class="mdl-tabs__tab-bar">
+                <a href="#starks-panel" class="mdl-tabs__tab is-active">General</a>
+                <a href="#lannisters-panel" class="mdl-tabs__tab">Character</a>
+                <a href="#targaryens-panel" class="mdl-tabs__tab">Games</a>
+            </div>
+            <div class="mdl-tabs__panel is-active" id="starks-panel">
+                    <ul>
+                      <li>Eddard</li>
+                      <li>Catelyn</li>
+                      <li>Robb</li>
+                      <li>Sansa</li>
+                      <li>Brandon</li>
+                      <li>Arya</li>
+                      <li>Rickon</li>
+                    </ul>
+                  </div>
+                  <div class="mdl-tabs__panel" id="lannisters-panel">
+                    <ul>
+                      <li>Tywin</li>
+                      <li>Cersei</li>
+                      <li>Jamie</li>
+                      <li>Tyrion</li>
+                    </ul>
+                  </div>
+                  <div class="mdl-tabs__panel" id="targaryens-panel">
+                    <ul>
+                      <li>Viserys</li>
+                      <li>Daenerys</li>
+                    </ul>
+                  </div>
+        </div>
+    </div>
+</div>
