--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<div class="container-fluid" *ngIf="classes && characters && character_history && classes.length && characters.length && character_history.length">
+<div class="container-fluid">
     <div class="row">
+        
         <!-- Top Players Table -->
         <div class="col-md-4 panel panel-default container-bordered">
             <div class="panel-heading">
@@ -12,9 +13,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <ng-container *ngFor="let character of getTopPlayers(); let i = index">
-                        <tr>
-                            <td class="col-xs-2">{{i+1 + ((topPlayerPage-1) * numPerPage)}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
+                    <ng-container *ngFor="let character of character_history | async; index as i"><!-- let character of classes | async; let i = index -->
+                        <tr *ngIf="i >= this.numPerPage * this.topPlayerPage && i <= (this.numPerPage * this.topPlayerPage) + this.numPerPage - 1">
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -44,9 +45,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <ng-container *ngFor="let character of getTopKills(); let i = index">
-                        <tr>
-                            <td class="col-xs-2">{{i+1 + ((topKillsPage-1) * numPerPage)}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
+                    <ng-container *ngFor="let character of character_history | async; index as i">
+                        <tr *ngIf="i >= this.numPerPage * this.topKillsPage && i <= (this.numPerPage * this.topKillsPage) + this.numPerPage - 1">
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -75,9 +76,9 @@
                         <th class="col-xs-2">#</th><th class="col-xs-8">Name</th><th class="col-xs-2">Level</th>                            
                     </tr>
                 </thead>
-                <tbody>
-                    <ng-container *ngFor="let character of getTopLevel(); let i = index">
-                        <tr>
+                <tbody> <!-- *ngFor="let character of character_history | async | SortingCharacterPipe:['level']:1; index as i" -->
+                    <ng-container *ngFor="let character of character_history | async; index as i">
+                        <tr *ngIf="i >= this.numPerPage * this.topLevelPage && i <= (this.numPerPage * this.topLevelPage) + this.numPerPage - 1">
                             <td class="col-xs-2">{{i+1 + ((topLevelPage-1) * numPerPage)}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.level}}</td>
                         </tr>
                     </ng-container>
