Added a progress bar
Note: The bar goes at the speed of our http request, it is only really fast right now, because all of our requests are local

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -3,6 +3,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <div class="main-container">
+  <ng-progress [thick]="true"></ng-progress>
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
