Added session guard, users can now login, also displays 'display name' under stats

--- a/my-app/src/app/profile/profile.component.html
+++ b/my-app/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
-<h3> PROFILE! </h3>
-
-<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-    <span aria-hidden="true">&larr;</span>TEST
-</button>
+<div class="container-fluid">
+    <div class="row">
+        
+    </div>
+</div>
