--- a/my-app/src/app/stats/stats.component.html
+++ b/my-app/src/app/stats/stats.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="page-header">
-            <h1><small>Player name</small></h1>
+            <h1><small>{{this._userService.getUserName()}}</small></h1>
         </div>
     </div>
     <div class="row">
