--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -18,19 +18,22 @@
           <a class="mdl-layout__tab" (click)="playClicked()" [routerLink]="['/play']">Play</a>
           <a class="mdl-layout__tab" [routerLink]="['/profile']">Profile</a>
           <a class="mdl-layout__tab" [routerLink]="['/stats']">Stats</a>
-          <a class="mdl-layout__tab" href="">Logout</a>
+          <!--<a class="mdl-layout__tab" href="">Logout</a>-->
+          <a *ngIf="!_storage.getValue('loggedIn')" class="mdl-layout__tab" [routerLink]="['/login']">Sign in</a>
+          <a *ngIf="_storage.getValue('loggedIn')" class="mdl-layout__tab" [routerLink]="['/login']" (click)="this._userService.logOut()">Sign out</a>
         </nav>
       </div>
     </header>
     
     <!--Slide nav -->
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Profile name here</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" (click)="playClicked()" [routerLink]="['/play']">Play</a>
         <a class="mdl-navigation__link" [routerLink]="['/profile']">Profile</a>
         <a class="mdl-navigation__link" [routerLink]="['/stats']">Stats</a>
-        <a class="mdl-navigation__link" href="">Logout</a>
+        <!-- <a class="mdl-navigation__link" href="">Logout</a> -->
+        <a *ngIf="!_storage.getValue('loggedIn')" class="mdl-navigation__link" [routerLink]="['/login']">Sign in</a>
+        <a *ngIf="_storage.getValue('loggedIn')" class="mdl-navigation__link" [routerLink]="['/login']" (click)="this._userService.logOut()">Sign out</a>
       </nav>
     </div>
     <main class="mdl-layout__content">
