--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -15,7 +15,7 @@
                 <tbody>
                     <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'score'; index as i"><!-- let character of classes | async; let i = index -->
                         <tr *ngIf="i >= this.numPerPage * this.topPlayerPage && i <= (this.numPerPage * this.topPlayerPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character_id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -45,9 +45,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'killed_by'; index as i">
+                    <ng-container *ngFor="let character of characters | async | sortingCharacter: 'killed_by'; index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topKillsPage && i <= (this.numPerPage * this.topKillsPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.killed_by}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.name}}</td><td class="col-xs-2 text-center">{{character.killed_by}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -77,9 +77,9 @@
                     </tr>
                 </thead>
                 <tbody> 
-                    <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'level';  index as i">
+                    <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'level_id';  index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topLevelPage && i <= (this.numPerPage * this.topLevelPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.id}}</td><td class="col-xs-2 text-center">{{character.level}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character_id}}</td><td class="col-xs-2 text-center">{{character.level_id}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
