--- a/my-app/src/app/stats/stats.component.html
+++ b/my-app/src/app/stats/stats.component.html
@@ -1,41 +1,58 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="page-header">
-            <h1><small>{{this._userService.getUserName()}}</small></h1>
-        </div>
+  <div class="row">
+      <div class="page-header">
+        <h1><small>{{this._userService.getUserName()}}</small></h1>
+      </div>
     </div>
     <div class="row">
+      <div class="col-md-4">
         <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
-            <div class="mdl-tabs__tab-bar">
-                <a href="#starks-panel" class="mdl-tabs__tab is-active">General</a>
-                <a href="#lannisters-panel" class="mdl-tabs__tab">Character</a>
-                <a href="#targaryens-panel" class="mdl-tabs__tab">Games</a>
+          <div class="mdl-tabs__tab-bar">
+            <a href="#current-panel" class="mdl-tabs__tab is-active">Current Characters</a>
+            <a href="#past-panel" class="mdl-tabs__tab">Past Characters</a>
+          </div>
+          <div class="mdl-tabs__panel is-active" id="current-panel">
+            <div class="list-group container-bordered">
+              <button type="button" class="list-group-item character-button" *ngFor="let character of getAliveCharacters(); index as i" (click)="characterClicked(character)">
+              {{character.character.name}}
+              </button>
             </div>
-            <div class="mdl-tabs__panel is-active" id="starks-panel">
-              <ul>
-                <li>Eddard</li>
-                <li>Catelyn</li>
-                <li>Robb</li>
-                <li>Sansa</li>
-                <li>Brandon</li>
-                <li>Arya</li>
-                <li>Rickon</li>
-              </ul>
+          </div>
+          <div class="mdl-tabs__panel" id="past-panel">
+            <div class="list-group container-bordered">
+              <button type="button" class="list-group-item character-button" *ngFor="let character of getDeadCharacters(); index as i" (click)="characterClicked(character)">
+              {{character.character.name}}
+              </button>
             </div>
-            <div class="mdl-tabs__panel" id="lannisters-panel">
-              <ul>
-                <li>Tywin</li>
-                <li>Cersei</li>
-                <li>Jamie</li>
-                <li>Tyrion</li>
-              </ul>
-            </div>
-            <div class="mdl-tabs__panel" id="targaryens-panel">
-              <ul>
-                <li>Viserys</li>
-                <li>Daenerys</li>
-              </ul>
-            </div>
+          </div>
         </div>
+      </div>
+      <div class="col-md-4">
+        <div class="panel panel-default" *ngIf="this.selectedCharacter">
+          <div class="panel-heading">
+            <h4 class="panel-title">{{this.selectedCharacter.character.name}}</h4>
+
+            <div class="input-group" *ngIf="!this.selectedCharacter.character.killed_by">
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-danger" (click)="deleteCharacterClicked()">
+                  Delete Character
+                </button>
+              </span>
+            
+              <input type="text" class="form-control" placeholder="Enter Character Name To Delete"  [value]="deleteCharacterString" (input)="deleteCharacterString = $event.target.value" >
+            </div>
+          </div>
+          <div class="panel-body list-group">
+            <li class="list-group-item">Attack Bonus: {{this.selectedCharacter.character.atk_bonus}}</li>
+            <li class="list-group-item">Damage Bonus: {{this.selectedCharacter.character.dmg_bonus}}</li>
+            <li class="list-group-item">Defense Bonus: {{this.selectedCharacter.character.def_bonus}}</li>
+            <li class="list-group-item">Health: {{this.selectedCharacter.character.health}}</li>
+            <li class="list-group-item">Weapon: {{this.selectedCharacter.character.weapon}}</li>
+            <li class="list-group-item">Armor: {{this.selectedCharacter.character.armor}}</li>
+            <li class="list-group-item">Level: {{this.selectedCharacter.level_id}}</li>
+            <li class="list-group-item" *ngIf="this.selectedCharacter.character.killed_by">Killed By:  {{getKilledByClass(this.selectedCharacter.character.killed_by).name}}</li>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
